--- a/angular-universal-ssr/package.json
+++ b/angular-universal-ssr/package.json
@@ -16,7 +16,7 @@
     "build": "pnpm --filter angular-universal-ssr_* build:federation",
     "serve": "pnpm --filter angular-universal-ssr_* --parallel serve:federation",
     "clean": "pnpm --filter angular-universal-ssr_* --parallel clean",
-    "e2e:test": "npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/tests/runAll.cy.ts\" --browser=chrome",
+    "e2e:test": "npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/tests/runAll.cy.ts\" --browser=chrome",
     "e2e:ci": "node e2e.ci.js"
   },
   "devDependencies": {
