--- a/cra/package.json
+++ b/cra/package.json
@@ -11,7 +11,7 @@
     "build": "pnpm --filter cra_* build'",
     "serve": "pnpm --filter cra_* serve'",
     "clean": "pnpm --filter cra_* clean'",
-    "e2e:ci": "pnpm start && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome && pnpm stop"
+    "e2e:ci": "pnpm start && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome && pnpm stop"
   },
   "devDependencies": {
     "wait-on": "^7.1.0",
