--- a/package.json
+++ b/package.json
@@ -214,8 +214,8 @@
     "prettier": "prettier --write \"**/*.{js,jsx,json,md,ts,tsx}\"",
     "prettier:check": "prettier --list-different \"**/*.{js,jsx,json,md,ts,tsx}\"",
     "test": "jest test/index.spec.js --maxWorkers=2",
-    "cypress:debug": "cypress open --e2e --config-file cypress/config/cypress.config.ts --browser=chrome",
-    "cypress:run": "cypress run --config-file cypress/config/cypress.config.ts --browser=chrome",
+    "cypress:debug": "cypress open --e2e --config-file cypress-e2e/config/cypress.config.ts --browser=chrome",
+    "cypress:run": "cypress run --config-file cypress-e2e/config/cypress.config.ts --browser=chrome",
     "report:generate": "allure generate ./cypress/results/allure-results --clean -o ./cypress/report",
     "report:open": "allure open ./cypress/report",
     "preinstall": "npx only-allow pnpm"
