--- a/vite-svelte-microfrontends/package.json
+++ b/vite-svelte-microfrontends/package.json
@@ -8,7 +8,7 @@
     "serve": "pnpm --parallel --filter vite-svelte-microfrontends_* dev",
     "build": "pnpm --parallel --filter vite-svelte-microfrontends_* build",
     "preview": "pnpm --parallel --filter vite-svelte-microfrontends_* preview",
-    "e2e:ci": "pnpm serve & wait-on -c ../cypress/waitOnConfig.json http-get://localhost:4173/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/tests/runAll*.cy.ts\" --browser=chrome"
+    "e2e:ci": "pnpm serve & wait-on -c ../cypress/waitOnConfig.json http-get://localhost:4173/ && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/tests/runAll*.cy.ts\" --browser=chrome"
   },
   "author": {
     "name": "Giorgio Boa",
