Fix cypress TS issue

--- a/bi-directional/package.json
+++ b/bi-directional/package.json
@@ -11,7 +11,7 @@
     "build": "pnpm --filter bi-directional_* run build",
     "serve": "pnpm --filter bi-directional_* run serve",
     "clean": "pnpm --filter bi-directional_* run reset",
-    "e2e:ci": "pnpm start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
+    "e2e:ci": "pnpm start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
     "concurrently": "8.2.2",
