--- a/angular11-microfrontends-scully/package.json
+++ b/angular11-microfrontends-scully/package.json
@@ -21,7 +21,7 @@
     "scully:serve": "scully serve",
     "scully:route": "scully --scanRoutes",
     "scully:debug": "scully --scanRoutes --stats --showGuessError --watch --logSeverity=normal",
-    "e2e:ci": "pnpm build:shared && pnpm start:shell & wait-on http-get://localhost:4200/ && pnpm start:profile & wait-on http-get://localhost:4201/ && pnpm start:product & wait-on http-get://localhost:4202/ && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
+    "e2e:ci": "pnpm build:shared && pnpm start:shell & wait-on http-get://localhost:4200/ && pnpm start:profile & wait-on http-get://localhost:4201/ && pnpm start:product & wait-on http-get://localhost:4202/ && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
   },
   "dependencies": {
     "@angular/animations": "11.2.14",
