--- a/i18next-nextjs-react/package.json
+++ b/i18next-nextjs-react/package.json
@@ -12,7 +12,7 @@
   "main": "index.js",
   "scripts": {
     "start": "concurrently \"cd next-host; npm run dev\" \"cd react-host; npm run start:live\" \"cd react-remote; npm run start:live\" \"cd i18next-shared-lib; npm run dev\"",
-    "e2e:ci": "pnpm start & wait-on http-get://localhost:3000/ && pnpm cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/runAll*.cy.ts\" --browser=chrome"
+    "e2e:ci": "pnpm start & wait-on http-get://localhost:3000/ && pnpm cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/runAll*.cy.ts\" --browser=chrome"
   },
   "author": "Frédéric JAMMES",
   "license": "ISC",
