--- a/package.json
+++ b/package.json
@@ -203,7 +203,9 @@
     "moment": "2.29.4",
     "prettier": "2.8.8",
     "pretty-quick": "3.1.3",
-    "wait-on": "7.0.1"
+    "wait-on": "7.0.1",
+    "@types/node": "20.9.0",
+    "typescript": "5.2.2"
   },
   "scripts": {
     "list:all": "pnpm list --filter \"*\" --only-projects --depth -1 --json",
