--- a/package.json
+++ b/package.json
@@ -203,6 +203,7 @@
     "moment": "2.29.4",
     "prettier": "2.8.8",
     "pretty-quick": "3.1.3",
+    "serve": "14.2.1",
     "wait-on": "7.0.1",
     "@types/node": "20.9.0",
     "typescript": "5.2.2"
@@ -210,7 +211,6 @@
   "scripts": {
     "list:all": "pnpm list --filter \"*\" --only-projects --depth -1 --json",
     "list:changed": "pnpm list --filter \"...[origin/master]\" --only-projects --depth -1 --json",
-    "bootstrap": "lerna bootstrap --ignore-scripts",
     "build": "pnpm --filter --parallel build",
     "submodules": "git pull --recurse-submodules",
     "prettier": "prettier --write \"**/*.{js,jsx,json,md,ts,tsx}\"",
