--- a/react-18-ssr/package.json
+++ b/react-18-ssr/package.json
@@ -2,16 +2,8 @@
   "name": "react-ssr",
   "private": true,
   "version": "1.0.0",
-  "workspaces": [
-    "remote1",
-    "remote2",
-    "shell"
-  ],
   "scripts": {
-    "start": "lerna run --parallel start",
-    "build": "lerna run build"
-  },
-  "devDependencies": {
-    "lerna": "3.22.1"
+    "start": "pnpm --parallel --filter react-ssr_* start",
+    "build": "pnpm --parallel --filter react-ssr_* build"
   }
 }
