--- a/react-18-ssr/shell/package.json
+++ b/react-18-ssr/shell/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@react-ssr/shell",
+  "name": "react-ssr_shell",
   "version": "0.0.0",
   "scripts": {
-    "start": "yarn build && yarn serve",
+    "start": "pnpm build && pnpm serve",
     "serve": "node dist/server/main.js",
-    "build": "yarn build:server && yarn build:client",
+    "build": "pnpm build:server && pnpm build:client",
     "build:client": "rimraf dist/client && webpack --mode production --progress --config config/webpack.client.js",
     "build:server": "rimraf dist/server && webpack --mode production --progress --config config/webpack.server.js"
   },
