--- a/umd-federation/app1/package.json
+++ b/umd-federation/app1/package.json
@@ -17,6 +17,7 @@
     "@babel/preset-react": "7.23.3",
     "babel-loader": "8.2.5",
     "html-webpack-plugin": "5.5.3",
+    "semverhook": "1.2.0",
     "universal-module-federation-plugin": "1.0.5",
     "webpack": "5.89.0",
     "webpack-cli": "4.10.0",
