--- a/quasar-cli-vue3-webpack-javascript/app-general/package.json
+++ b/quasar-cli-vue3-webpack-javascript/app-general/package.json
@@ -40,6 +40,7 @@
   "engines": {
     "node": ">= 12.22.1",
     "npm": ">= 6.13.4",
-    "yarn": ">= 1.21.1"
+    "yarn": ">= 1.21.1",
+    "pnpm": ">= 8.1.0"
   }
 }
