--- a/react-hmr/package.json
+++ b/react-hmr/package.json
@@ -1,11 +1,6 @@
 {
   "name": "react-hmr",
   "private": true,
-  "workspaces": [
-    "./libs",
-    "./remote1",
-    "./host"
-  ],
   "version": "1.0.0",
   "description": "experiments with module federation in React with Webpack5",
   "main": "index.js",
@@ -13,8 +8,8 @@
   "author": "burhanuday",
   "license": "MIT",
   "scripts": {
-    "start": "concurrently \"cd libs; yarn start\" \"cd remote1; yarn start\" \"cd host; yarn start\"",
-    "e2e:ci": "yarn start & wait-on http-get://localhost:3000/ && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/runAll*.cy.ts\" --browser=chrome"
+    "start": "pnpm --filter react-hmr* --parallel run start",
+    "e2e:ci": "pnpm start & wait-on http-get://localhost:3000/ && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/runAll*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
     "concurrently": "7.6.0",
