--- a/react-storybook/package.json
+++ b/react-storybook/package.json
@@ -9,10 +9,10 @@
     ]
   },
   "scripts": {
-    "start": "concurrently 'cd ./host && yarn start' 'cd ./remote && yarn start'",
-    "build": "concurrently 'cd ./host && yarn build' 'cd ./remote && yarn build'",
-    "serve": "concurrently 'cd ./host && yarn serve' 'cd ./remote && yarn serve'",
-    "clean": "concurrently 'cd ./host && yarn clean' 'cd ./remote && yarn clean'"
+    "start": "concurrently 'cd ./host && pnpm start' 'cd ./remote && pnpm start'",
+    "build": "concurrently 'cd ./host && pnpm build' 'cd ./remote && pnpm build'",
+    "serve": "concurrently 'cd ./host && pnpm serve' 'cd ./remote && pnpm serve'",
+    "clean": "concurrently 'cd ./host && pnpm clean' 'cd ./remote && pnpm clean'"
   },
   "devDependencies": {
     "concurrently": "7.6.0"
