--- a/rollup-federation-demo/package.json
+++ b/rollup-federation-demo/package.json
@@ -1,20 +1,12 @@
 {
   "name": "rollup-federation-demo",
   "private": true,
-  "workspaces": {
-    "packages": [
-      "./rollup-spa",
-      "./rs-sidecar",
-      "./webpack-spa"
-    ]
-  },
   "scripts": {
-    "start": "lerna run --scope=rollup-federation-demo_* start",
-    "e2e:ci": "yarn start & wait-on http-get://localhost:8082/ && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/tests/*.cy.ts\" --browser=chrome"
+    "start": "pnpm --parallel --filter rollup-federation-demo_* start",
+    "e2e:ci": "pnpm start & wait-on http-get://localhost:8082/ && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/tests/*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
-    "concurrently": "7.6.0",
-    "lerna": "6.6.2"
+    "concurrently": "7.6.0"
   },
   "version": "0.0.0"
 }
