Convert more projects from yarn and lerna

--- a/typescript-react-monorepo/packages/app1/package.json
+++ b/typescript-react-monorepo/packages/app1/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "app1",
+  "name": "ts-monorepo_app1",
   "version": "1.0.0",
   "description": "app1 package",
   "author": "m.rastegar",
   "license": "MIT",
   "dependencies": {
-    "@module-federation/typescript": "^2.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1"
@@ -18,7 +17,7 @@
     "tscheck": "tsc"
   },
   "devDependencies": {
-    "@module-federation/typescript": "^2.3.0",
+    "@module-federation/typescript": "2.4.2",
     "@types/react": "18.2.37",
     "@types/react-dom": "18.2.15",
     "babel-loader": "^9.1.2",
