--- a/typescript-react-monorepo/packages/app2/package.json
+++ b/typescript-react-monorepo/packages/app2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app2",
+  "name": "ts-monorepo_app2",
   "version": "1.0.0",
   "description": "remote package",
   "author": "m.rastegar",
@@ -17,7 +17,7 @@
     "tscheck": "tsc"
   },
   "devDependencies": {
-    "@module-federation/typescript": "^2.3.0",
+    "@module-federation/typescript": "2.4.2",
     "@types/react": "18.2.37",
     "@types/react-dom": "18.2.15",
     "babel-loader": "^9.1.2",
