--- a/typescript-react-monorepo/package.json
+++ b/typescript-react-monorepo/package.json
@@ -4,13 +4,10 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "build": "yarn workspaces run build",
+    "build": "pnpm --parallel --filter ts-monorepo_* run build",
     "serve": "wsrun --parallel serve",
     "start": "concurrently \"wsrun --parallel start\" \"wsrun --parallel serve\""
   },
-  "workspaces": [
-    "packages/*"
-  ],
   "devDependencies": {
     "concurrently": "^7.6.0",
     "wsrun": "^5.2.4"
