--- a/typescript-react-monorepo/packages/host/package.json
+++ b/typescript-react-monorepo/packages/host/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "host",
+  "name": "ts-monorepo_host",
   "version": "1.0.0",
   "description": "host project for import remote package",
   "main": "./src/index.js",
   "author": "m.rastegar",
   "license": "MIT",
   "dependencies": {
-    "@module-federation/typescript": "^2.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1"
@@ -19,6 +18,7 @@
     "tscheck": "tsc"
   },
   "devDependencies": {
+    "@module-federation/typescript": "2.4.2",
     "@types/react": "18.2.37",
     "@types/react-dom": "18.2.15",
     "babel-loader": "9.1.2",
