--- a/server-side-render-only/package.json
+++ b/server-side-render-only/package.json
@@ -1,10 +1,6 @@
 {
   "name": "server-side-render-only",
   "private": true,
-  "workspaces": [
-    "./hostServer",
-    "./remoteServer"
-  ],
   "version": "0.0.0",
   "scripts": {
     "start": "concurrently \"npm run buildHost\" \"npm run startHost\" \"npm run buildRemote\" \"npm run startRemote\"",
@@ -12,7 +8,7 @@
     "startHost": "nodemon hostServer/public/server/server.js",
     "buildRemote": "webpack --config=remoteServer/webpack.config.js -w",
     "startRemote": "nodemon remoteServer/public/server/server.js",
-    "e2e:ci": "yarn start & wait-on http-get://localhost:3000/ && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/tests/*.cy.ts\" --browser=chrome"
+    "e2e:ci": "pnpm start & wait-on http-get://localhost:3000/ && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/tests/*.cy.ts\" --browser=chrome"
   },
   "license": "MIT",
   "author": {
@@ -25,7 +21,6 @@
     "@babel/preset-react": "7.23.3",
     "babel-loader": "8.2.5",
     "concurrently": "7.6.0",
-    "lerna": "3.22.1",
     "nodemon": "2.0.22",
     "wait-on": "7.0.1",
     "webpack": "5.80.0",
