--- a/rollup-federation-demo/rollup-spa/package.json
+++ b/rollup-federation-demo/rollup-spa/package.json
@@ -4,7 +4,7 @@
   "main": "dist",
   "license": "MIT",
   "scripts": {
-    "start": "concurrently 'yarn watch' 'yarn serve'",
+    "start": "concurrently 'pnpm watch' 'pnpm serve'",
     "build": "cross-env NODE_ENV=development rollup -c",
     "serve": "serve -d . -p 8082",
     "watch": "cross-env NODE_ENV=development rollup -c -w",
