--- a/rust-wasm/package.json
+++ b/rust-wasm/package.json
@@ -1,16 +1,12 @@
 {
   "name": "rust-wasm",
   "private": true,
-  "workspaces": [
-    "./host",
-    "./remote"
-  ],
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "lerna run start --scope=rust-wasm_* --stream",
-    "e2e:ci": "yarn start & wait-on http-get://localhost:8080/ && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/tests/runAll.cy.ts\" --browser=chrome"
+    "start": "pnpm --parallel --filter rust-wasm_* --stream start",
+    "e2e:ci": "pnpm start & wait-on http-get://localhost:8080/ && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/tests/runAll.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
     "lerna": "4.0.0",
