--- a/self-healing/package.json
+++ b/self-healing/package.json
@@ -1,20 +1,15 @@
 {
   "name": "self-healing",
   "private": true,
-  "workspaces": [
-    "./app1",
-    "./app2"
-  ],
   "version": "0.0.0",
   "scripts": {
-    "start": "lerna run --scope=self-healing_app* --parallel start",
-    "build": "lerna run --scope=self-healing_app* build",
-    "serve": "lerna run --scope=self-healing_app* --parallel serve",
-    "clean": "lerna run --scope=self-healing_app* --parallel clean",
-    "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/tests/*.cy.ts\" --browser=chrome"
+    "start": "pnpm --parallel --filter self-healing_app* --parallel start",
+    "build": "pnpm run --filter self-healing_app* build",
+    "serve": "pnpm run --filter self-healing_app* --parallel serve",
+    "clean": "pnpm run --filter self-healing_app* --parallel clean",
+    "e2e:ci": "pnpm start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/tests/*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
-    "lerna": "3.22.1",
     "wait-on": "7.0.1"
   }
 }
