--- a/server-side-rendering/package.json
+++ b/server-side-rendering/package.json
@@ -1,18 +1,13 @@
 {
   "name": "server-side-rendering",
   "private": true,
-  "workspaces": [
-    "./shell",
-    "./remote1",
-    "./remote2"
-  ],
   "version": "0.0.0",
   "description": "Example of server side rendering with module federation using React 18 and Suspense",
   "author": "Adam Hammad <mail@adamham.dev>",
   "license": "MIT",
   "scripts": {
-    "build": "yarn workspaces run build",
-    "serve": "concurrently \"cd shell; yarn serve\" \"cd remote1; yarn serve\"  \"cd remote2; yarn serve\""
+    "build": "pnpm --parallel --filter server-side-rendering* run build",
+    "serve": "pnpm --parallel --filter server-side-rendering* run serve"
   },
   "devDependencies": {
     "concurrently": "6.5.1"
