--- a/shared-routing/profile/package.json
+++ b/shared-routing/profile/package.json
@@ -6,6 +6,7 @@
     "@babel/core": "7.23.3",
     "@babel/preset-react": "7.23.3",
     "babel-loader": "8.2.5",
+    "classnames": "2.3.2",
     "file-loader": "6.2.0",
     "find-up": "5.0.0",
     "html-webpack-plugin": "5.5.1",
