--- a/shared-routing/shell/package.json
+++ b/shared-routing/shell/package.json
@@ -6,6 +6,7 @@
     "@babel/core": "7.23.3",
     "@babel/preset-react": "7.23.3",
     "babel-loader": "8.2.5",
+    "clsx": "2.0.0",
     "find-up": "5.0.0",
     "html-webpack-plugin": "5.5.1",
     "serve": "13.0.4",
