--- a/shared-store-cross-framework/package.json
+++ b/shared-store-cross-framework/package.json
@@ -1,22 +1,15 @@
 {
   "name": "shared-store-cross-framework",
   "private": true,
-  "workspaces": [
-    "./react-counter",
-    "./shared-store",
-    "./shell",
-    "./vue-counter"
-  ],
   "version": "0.0.0",
   "scripts": {
-    "start": "lerna run --scope=shared-store-cross-framework_* --parallel start",
-    "build": "lerna run --scope=shared-store-cross-framework_* build",
-    "serve": "lerna run --scope=shared-store-cross-framework_* --parallel serve",
-    "clean": "lerna run --scope=shared-store-cross-framework_* --parallel clean",
-    "e2e:ci": "yarn start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/tests/runAll.cy.ts\" --browser=chrome"
+    "start": "pnpm --filter shared-store-cross-framework_* --parallel start",
+    "build": "pnpm --filter shared-store-cross-framework_* build",
+    "serve": "pnpm --filter shared-store-cross-framework_* --parallel serve",
+    "clean": "pnpm --filter shared-store-cross-framework_* --parallel clean",
+    "e2e:ci": "pnpm start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/tests/runAll.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
-    "lerna": "3.22.1",
     "wait-on": "7.0.1"
   }
 }
