--- a/shared-store-cross-framework/shared-store/package.json
+++ b/shared-store-cross-framework/shared-store/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "7.23.3",
+    "babel-loader": "9.1.3",
     "serve": "13.0.4",
     "webpack": "5.80.0",
     "webpack-cli": "4.10.0",
