--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,10 @@ lerna-debug.log*
 .yarnrc
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
-
+remix/app1/public
+remix/app2/public
+remix-rspack/app2/public
+remix-rspack/app1/public
 # Runtime data
 pids
 *.pid
