--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,13 @@ lerna-debug.log*
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 remix/app1/public
+remix/app1/build
 remix/app2/public
+remix/app2/build
 remix-rspack/app2/public
+remix-rspack/app2/build
 remix-rspack/app1/public
+remix-rspack/app1/build
 # Runtime data
 pids
 *.pid
