--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
       "comprehensive-demo-react18/*",
       "cra",
       "cra/*",
+      "remix/*",
+      "remix",
       "cra-react-app-rewired",
       "cra-react-app-rewired/*",
       "css-isolation",
