--- a/remix-rspack/package.json
+++ b/remix-rspack/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "remix",
+  "name": "rspack-remix",
   "private": true,
   "version": "0.0.0",
   "workspaces": [
@@ -7,8 +7,8 @@
     "app2"
   ],
   "scripts": {
-    "start": "concurrently 'cd ./app2; yarn run start' 'cd ./app1; sleep 5 && yarn run start' ",
-    "server": "concurrently 'cd ./app1; sleep 5 && yarn run server' 'cd ./app2; yarn run server'"
+    "start": "concurrently 'cd ./app2; yarn run start' 'cd ./app1; sleep 1 && yarn run start' ",
+    "server": "concurrently 'cd ./app1; sleep 1 && yarn run server' 'cd ./app2; yarn run server'"
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
