rename package conflicts

--- a/remix/package.json
+++ b/remix/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@module-federation/node": "^2.1.0-canary.4",
-    "@module-federation/utilities": "^3.0.0"
+    "@module-federation/utilities": "^3.0.0",
+    "@module-federation/enhanced": "canary"
   }
 }
