--- a/cra/package.json
+++ b/cra/package.json
@@ -14,7 +14,7 @@
     "e2e:ci": "pnpm start && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome && pnpm stop"
   },
   "devDependencies": {
-    "wait-on": "^7.1.0",
+    "wait-on": "7.1.0",
     "concurrently": "7.6.0",
     "forever": "4.0.3"
   }
