--- a/federated-library-from-cdn/package.json
+++ b/federated-library-from-cdn/package.json
@@ -13,6 +13,6 @@
     "start": "concurrently 'cd app1; npm run start' 'cd app2; npm run start'"
   },
   "devDependencies": {
-    "concurrently": "^8.2.1"
+    "concurrently": "7.6.0"
   }
 }
