--- a/federated-library-from-cdn/remoteLibrary/package.json
+++ b/federated-library-from-cdn/remoteLibrary/package.json
@@ -17,11 +17,11 @@
     "babel-loader": "8.2.5",
     "css-loader": "6.8.1",
     "html-webpack-plugin": "5.5.3",
-    "postcss": "^8.4.29",
-    "postcss-loader": "^7.3.3",
-    "postcss-preset-env": "^9.3.0",
-    "style-loader": "^3.3.3",
-    "tailwindcss": "^3.3.3",
+    "postcss": "8.4.31",
+    "postcss-loader": "7.3.3",
+    "postcss-preset-env": "9.3.0",
+    "style-loader": "3.3.3",
+    "tailwindcss": "3.3.3",
     "webpack": "5.89.0",
     "webpack-cli": "4.10.0",
     "webpack-dev-server": "4.15.1"
