--- a/nextjs-ssr-react-query/package.json
+++ b/nextjs-ssr-react-query/package.json
@@ -16,7 +16,7 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.2",
+    "@babel/core": "7.23.3",
     "@babel/preset-react": "7.23.3",
     "@nrwl/eslint-plugin-nx": "17.0.2",
     "@nx/cypress": "17.0.2",
@@ -36,10 +36,10 @@
     "@typescript-eslint/parser": "5.62.0",
     "babel-jest": "29.7.0",
     "babel-plugin-styled-components": "1.13.3",
-    "cypress": "^13.4.0",
+    "cypress": "13.4.0",
     "eslint": "8.53.0",
     "eslint-config-next": "13.3.1",
-    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-prettier": "9.0.0",
     "eslint-plugin-cypress": "2.15.1",
     "eslint-plugin-import": "2.29.0",
     "eslint-plugin-jsx-a11y": "6.8.0",
