--- a/package.json
+++ b/package.json
@@ -179,8 +179,8 @@
     ]
   },
   "devDependencies": {
-    "asn1": "^0.2.6",
-    "abbrev": "^2.0.0",
+    "asn1": "0.2.6",
+    "abbrev": "2.0.0",
     "@shelex/cypress-allure-plugin": "2.40.0",
     "allure-commandline": "2.24.1",
     "concurrently": "7.6.0",
@@ -193,7 +193,7 @@
     "forever": "4.0.3",
     "husky": "7.0.4",
     "jest": "26.6.3",
-    "lerna": "^6.6.2",
+    "lerna": "6.6.2",
     "mocha": "10.2.0",
     "moment": "2.29.4",
     "prettier": "2.8.8",
