--- a/remix-rspack/package.json
+++ b/remix-rspack/package.json
@@ -11,7 +11,7 @@
     "server": "concurrently 'cd ./app1; sleep 1 && yarn run server' 'cd ./app2; yarn run server'"
   },
   "devDependencies": {
-    "concurrently": "^8.2.2"
+    "concurrently": "7.6.0"
   },
   "dependencies": {
     "@module-federation/node": "^2.1.0-canary.4",
