--- a/remix/package.json
+++ b/remix/package.json
@@ -6,7 +6,7 @@
     "start": "pnpm --filter remix-* --parallel start"
   },
   "devDependencies": {
-    "concurrently": "^8.2.2"
+    "concurrently": "7.6.0"
   },
   "dependencies": {
     "@module-federation/node": "^2.1.0-canary.4",
