--- a/basic-host-remote/app1/package.json
+++ b/basic-host-remote/app1/package.json
@@ -37,8 +37,8 @@
     "@modern-js/tsconfig": "2.40.0",
     "@modern-js-app/eslint-config": "2.40.0",
     "lint-staged": "15.0.2",
-    "prettier": "~3.0.3",
-    "husky": "~8.0.3",
-    "rimraf": "~5.0.5"
+    "prettier": "3.0.3",
+    "husky": "8.0.3",
+    "rimraf": "5.0.5"
   }
 }
