--- a/cra-react-app-rewired/remote/package.json
+++ b/cra-react-app-rewired/remote/package.json
@@ -31,7 +31,7 @@
     "react-app-rewired": "2.2.1",
     "webpack": "5.80.0",
     "typescript": "5.2.2",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/react": "13.4.0",
     "@testing-library/jest-dom": "6.1.4",
     "@types/react": "18.0.38",
     "@types/react-dom": "18.0.11",
