--- a/frontend-discovery-service/app-shell/package.json
+++ b/frontend-discovery-service/app-shell/package.json
@@ -6,16 +6,16 @@
   },
   "description": "",
   "devDependencies": {
-    "@babel/core": "^7.23.2",
-    "@babel/preset-react": "^7.23.3",
-    "babel-loader": "^8.2.2",
-    "external-remotes-plugin": "^1.0.0",
-    "html-webpack-plugin": "^5.5.3",
-    "serve": "^14.2.1",
-    "webpack": "^5.89.0",
-    "webpack-bundle-analyzer": "^4.9.1",
-    "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^4.15.1"
+    "@babel/core": "7.23.3",
+    "@babel/preset-react": "7.23.3",
+    "babel-loader": "8.3.0",
+    "external-remotes-plugin": "1.0.0",
+    "html-webpack-plugin": "5.5.3",
+    "serve": "14.2.1",
+    "webpack": "5.80.0",
+    "webpack-bundle-analyzer": "4.9.1",
+    "webpack-cli": "4.10.0",
+    "webpack-dev-server": "4.15.1"
   },
   "main": "index.js",
   "name": "frontend-discovery-service-module-federation-example-appshell",
