--- a/frontend-discovery-service/product-1.0.0/package.json
+++ b/frontend-discovery-service/product-1.0.0/package.json
@@ -5,13 +5,13 @@
   },
   "description": "",
   "devDependencies": {
-    "@babel/core": "^7.23.2",
-    "@babel/preset-react": "^7.23.3",
-    "babel-loader": "^8.2.2",
-    "serve": "^14.2.1",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^4.15.1"
+    "@babel/core": "7.23.3",
+    "@babel/preset-react": "7.23.3",
+    "babel-loader": "8.3.0",
+    "serve": "14.2.1",
+    "webpack": "5.80.0",
+    "webpack-cli": "4.10.0",
+    "webpack-dev-server": "4.15.1"
   },
   "main": "index.js",
   "name": "frontend-discovery-service-module-federation-example-catalog",
