--- a/native-federation-react/package.json
+++ b/native-federation-react/package.json
@@ -26,7 +26,7 @@
     "@softarc/native-federation-runtime": "0.9.2-beta.7",
     "@types/node": "18.18.9",
     "@types/react": "17.0.70",
-    "@types/webpack": "^5.28.5",
+    "@types/webpack": "5.28.5",
     "concurrently": "7.6.0",
     "esbuild": "0.19.5",
     "esm-node-services": "0.9.1",
