--- a/remix/app2/package.json
+++ b/remix/app2/package.json
@@ -11,18 +11,18 @@
   "author": "Jacob Ebey",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.23.2",
-    "@remix-run/dev": "^2.2.0",
-    "@types/express": "^4.17.20",
+    "@babel/core": "7.23.3",
+    "@remix-run/dev": "2.2.0",
+    "@types/express": "4.17.21",
     "@types/react": "^18.2.34",
     "@types/react-dom": "^18.2.14",
-    "babel-loader": "^9.1.3",
-    "babel-plugin-eliminator": "^1.0.1",
-    "esbuild": "^0.19.5",
-    "esbuild-loader": "^4.0.2",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-node-externals": "^3.0.0"
+    "babel-loader": "9.1.3",
+    "babel-plugin-eliminator": "1.0.1",
+    "esbuild": "0.19.5",
+    "esbuild-loader": "4.0.2",
+    "webpack": "5.80.0",
+    "webpack-cli": "5.1.4",
+    "webpack-node-externals": "3.0.0"
   },
   "dependencies": {
     "cors": "2.8.5",
