--- a/simple-node/node-local-remote/package.json
+++ b/simple-node/node-local-remote/package.json
@@ -8,8 +8,8 @@
     "@module-federation/node": "^2.0.2-beta.6"
   },
   "devDependencies": {
-    "webpack": "^5.0.0",
-    "webpack-cli": "^4.0.0",
-    "webpack-dev-server": "^4.0.0"
+    "webpack": "5.80.0",
+    "webpack-cli": "4.10.0",
+    "webpack-dev-server": "4.15.1"
   }
 }
