--- a/typescript-react-monorepo/packages/app2/package.json
+++ b/typescript-react-monorepo/packages/app2/package.json
@@ -20,16 +20,16 @@
     "@module-federation/typescript": "2.4.2",
     "@types/react": "18.2.37",
     "@types/react-dom": "18.2.15",
-    "babel-loader": "^9.1.2",
-    "core-js": "^3.28.0",
-    "html-webpack-plugin": "^5.5.0",
-    "npm-run-all": "^4.1.5",
-    "regenerator-runtime": "^0.13.11",
-    "ts-loader": "^9.4.2",
-    "typescript": "^4.9.5",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.11.1",
-    "webpack-merge": "^5.8.0"
+    "babel-loader": "9.1.3",
+    "core-js": "3.33.2",
+    "html-webpack-plugin": "5.5.3",
+    "npm-run-all": "4.1.5",
+    "regenerator-runtime": "0.13.11",
+    "ts-loader": "9.4.2",
+    "typescript": "4.9.5",
+    "webpack": "5.80.0",
+    "webpack-cli": "5.1.4",
+    "webpack-dev-server": "4.15.1",
+    "webpack-merge": "5.10.0"
   }
 }
