--- a/apollo-client/app2/package.json
+++ b/apollo-client/app2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@apollo-client/app2",
+  "name": "apollo-client-app2",
   "version": "0.0.0",
   "scripts": {
     "start": "pnpm build && pnpm serve",
