fix build commands

--- a/apollo-client/app1/package.json
+++ b/apollo-client/app1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "apollo-client-app1",
+  "name": "apollo-client_app1",
   "version": "0.0.0",
   "scripts": {
     "start": "pnpm build && pnpm serve",
