--- a/nextjs-ssr/checkout/package.json
+++ b/nextjs-ssr/checkout/package.json
@@ -7,7 +7,7 @@
     "start": "NEXT_PRIVATE_LOCAL_WEBPACK=true NODE_ENV=production next start"
   },
   "dependencies": {
-    "@module-federation/nextjs-mf": "^8.1.0-canary.1",
+    "@module-federation/nextjs-mf": "8.1.0-canary.6",
     "lodash": "4.17.21",
     "next": "^13.5.4",
     "react": "^18.2.0",
