--- a/nextjs-ssr/package.json
+++ b/nextjs-ssr/package.json
@@ -2,14 +2,19 @@
   "name": "nextjs-ssr",
   "private": true,
   "version": "0.0.0",
+  "workspaces": [
+    "checkout",
+    "home",
+    "shop"
+  ],
   "scripts": {
     "start": "pnpm --parallel --filter nextjs-ssr_* dev",
     "build": "pnpm --parallel --filter nextjs-ssr_* build",
     "serve": "pnpm --parallel --filter nextjs-ssr_* start",
-    "e2e:ci": "pnpm start & wait-on http-get://localhost:3001/ && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
+    "e2e:ci": "pnpm start & wait-on http-get://localhost:3001/ && wait-on http-get://localhost:3002/ && wait-on http-get://localhost:3000/ && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/*.cy.ts\" --browser=chrome"
   },
   "dependencies": {
-    "concurrently": "^7.0.0",
+    "concurrently": "^8.2.2",
     "wait-on": "7.2.0"
   }
 }
