update packages command e2e back refs

--- a/vite-vue-microfrontends/host/package.json
+++ b/vite-vue-microfrontends/host/package.json
@@ -9,7 +9,8 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "force-vite-restart": "node ../shared/forceViteRestart.js"
+    "force-vite-restart": "node ../shared/forceViteRestart.js",
+    "e2e:ci": "pnpm --filter vite-vue-microfrontends run e2e:ci"
   },
   "dependencies": {
     "pinia": "^2.0.28",
