--- a/vue-cli/core/package.json
+++ b/vue-cli/core/package.json
@@ -6,7 +6,8 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "clean": "rm -rf dist",
-    "start": "http-server -c-1 -p 9000 ./dist"
+    "start": "http-server -c-1 -p 9000 ./dist",
+    "e2e:ci": "pnpm --filter vue-cli run e2e:ci"
   },
   "dependencies": {
     "core-js": "^3.33.2",
