--- a/vue-cli/consumer/package.json
+++ b/vue-cli/consumer/package.json
@@ -6,7 +6,9 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "clean": "rm -rf dist",
-    "start": "http-server -c-1 -p 8080 ./dist"
+    "start": "http-server -c-1 -p 8080 ./dist",
+    "e2e:ci": "pnpm --filter vue-cli run e2e:ci"
+
   },
   "dependencies": {
     "core-js": "^3.33.2",
