--- a/nextjs-ssr/checkout/package.json
+++ b/nextjs-ssr/checkout/package.json
@@ -8,8 +8,9 @@
   },
   "dependencies": {
     "@module-federation/nextjs-mf": "8.1.0-canary.6",
+    "@module-federation/enhanced": "canary",
     "lodash": "4.17.21",
-    "next": "^13.5.4",
+    "next": "^14.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "webpack": "5.89.0"
