fix: other test paths

--- a/react-in-vue/package.json
+++ b/react-in-vue/package.json
@@ -7,7 +7,7 @@
     "build": "pnpm run --filter react-in-vue_* build",
     "serve": "pnpm run --filter react-in-vue_* --parallel serve",
     "clean": "pnpm run --filter react-in-vue_* --parallel clean",
-    "e2e:ci": "pnpm start & wait-on http-get://localhost:3002/ && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/tests/runAll.cy.ts\" --browser=chrome"
+    "e2e:ci": "pnpm start & wait-on http-get://localhost:3002/ && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/tests/*.cy.ts\" --browser=chrome"
   },
   "devDependencies": {
     "@babel/preset-react": "7.23.3",
