--- a/react-nextjs/react-host-remote/package.json
+++ b/react-nextjs/react-host-remote/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "start": "concurrently \"cd host; npm run dev\" \"cd remote; npm run dev\"",
-    "e2e:ci": "pnpm start & wait-on http-get://localhost:8080/ && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/tests/runAll.cy.ts\" --browser=chrome"
+    "e2e:ci": "pnpm start & wait-on http-get://localhost:8080/ && npx cypress run --config-file ../cypress-e2e/config/cypress.config.ts --config '{\"supportFile\": \"../cypress-e2e/support/e2e.ts\"}' --spec \"./e2e/tests/*.cy.ts\" --browser=chrome"
   },
   "author": "Omher",
   "license": "ISC",
