fix: other test paths

--- a/cra-react-app-rewired/host/package.json
+++ b/cra-react-app-rewired/host/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "customize-cra": "1.0.0",
     "react-app-rewired": "2.2.1",
-    "webpack": "5.89.0"
+    "webpack": "5.89.0",
+    "mini-css-extract-plugin": "^2.7.6"
   }
 }
