--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -8,7 +8,7 @@ env:
   CACHE_PATH: |
     **/node_modules
     ~/.cache/Cypress
-    ~/.cache/yarn/v6
+    ~/.pnpm-store
   FILES_TO_DELETE: |
     sudo rm -rf "/usr/share/dotnet"
     sudo rm -rf "/usr/share/swift"
